--- a/cit230/lesson9/styles/small.css
+++ b/cit230/lesson9/styles/small.css
@@ -3,6 +3,17 @@
 *{
     font-family: 'Raleway', sans-serif;  
 }
+/* EXTRA WHITE SPACE */
+
+html {  box-sizing: border-box; }
+*, *:before, *:after {  box-sizing: inherit; }
+
+.navigation{
+    font-size: 0px;
+}
+.navigation > *{
+    font-size: 1rem;
+}
 
 #pancakes {
     background-color: rgb(0, 157, 230);
@@ -47,7 +58,7 @@ header nav ul{
     list-style-type: none;
     text-align: center;
     padding: 0;
-    margin: 0;
+    margin: 0 !important;
     
 }
 
